--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
                 </div>
                 <div class="banner-pic photos">
                     <div class="banner-pic-img">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
-                        <img src="img/loading.gif" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911425.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911423.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911418.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911420.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911419.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911422.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911417.jpg" alt="loading">
+                        <img src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202305211314835.jpg" alt="loading">
                     </div>
                 </div>
             </div>
