--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
                 </div>
             </div>
 
+            <!-- 壁纸收藏 -->
+            <div class="group-item">
+                <a class="group-item-icon" href="https://wallpaper.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                    <img class="group-item-icon-img" src="img/bizhi.png" alt="product-icon" title="product-icon">
+                </a>
+                <div class="group-info-group">
+                    <div class="group-info">
+                        <a class="title" href="https://wallpaper.lixiaomu.fun/" target="_blank" rel="noopener nofollow">壁纸收藏</a>
+                        <a class="discription" href="https://wallpaper.lixiaomu.fun/" target="_blank" rel="noopener nofollow">高清壁纸</a>
+                    </div>
+                    <div class="group-info-button">
+                        <a class="linkbutton" href="https://wallpaper.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 视频解析 -->
+            <div class="group-item">
+                <a class="group-item-icon" href="https://video.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                    <img class="group-item-icon-img" src="img/video.png" alt="product-icon" title="product-icon">
+                </a>
+                <div class="group-info-group">
+                    <div class="group-info">
+                        <a class="title" href="https://video.lixiaomu.fun/" target="_blank" rel="noopener nofollow">视频解析</a>
+                        <a class="discription" href="https://video.lixiaomu.fun/" target="_blank" rel="noopener nofollow">VIP视频解析</a>
+                    </div>
+                    <div class="group-info-button">
+                        <a class="linkbutton" href="https://video.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
+                    </div>
+                </div>
+            </div>
+
             <!-- 公众号 -->
             <div class="group-item">
                 <a class="group-item-icon" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
@@ -247,7 +279,23 @@
                         </div>
                     </div>
 
-
+                    <!-- 足迹 -->
+                    <div class="group-item">
+                        <a class="group-item-icon" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                            <img class="group-item-icon-img" src="img/zuji.png" alt="product-icon" title="product-icon">
+                        </a>
+                        <div class="group-info-group">
+                            <div class="group-info">
+                                <a class="title" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">足迹
+                                            </a>
+                                <a class="discription" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">记录曾去过的地方
+                                </a>
+                            </div>
+                            <div class="group-info-button">
+                                <a class="linkbutton" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
