--- a/index.html
+++ b/index.html
@@ -131,18 +131,18 @@
                 </div>
             </div>
 
-            <!-- 公众号 -->
+            <!-- 工具箱 -->
             <div class="group-item">
-                <a class="group-item-icon" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
-                    <img class="group-item-icon-img" src="img/wechatoa.png" alt="product-icon" title="product-icon">
+                <a class="group-item-icon" href="https://tool.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                    <img class="group-item-icon-img" src="img/favicon.webp" alt="product-icon" title="product-icon">
                 </a>
                 <div class="group-info-group">
                     <div class="group-info">
-                        <a class="title" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">公众号</a>
-                        <a class="discription" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">没事少说话</a>
+                        <a class="title" href="https://tool.lixiaomu.fun/" target="_blank" rel="noopener nofollow">工具箱</a>
+                        <a class="discription" href="https://tool.lixiaomu.fun/" target="_blank" rel="noopener nofollow">没用的工具</a>
                     </div>
                     <div class="group-info-button">
-                        <a class="linkbutton" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
+                        <a class="linkbutton" href="https://tool.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
                     </div>
                 </div>
             </div>
@@ -345,6 +345,26 @@
                         </div>
                     </div>
 
+
+                    <!-- 公众号 -->
+                    <div class="group-item">
+                        <a class="group-item-icon" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                            <svg class="icons group-item-icon-img">
+            <use xlink:href="#icon-weixin"></use>
+          </svg>
+                        </a>
+                        <div class="group-info-group">
+                            <div class="group-info">
+                                <a class="title" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">公众号</a>
+                                <a class="discription" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">公众号：没事少说话</a>
+                            </div>
+                            <div class="group-info-button">
+                                <a class="linkbutton" href="https://wechatoa.lixiaomu.fun/" target="_blank" rel="noopener nofollow">关注</a>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <!-- 邮箱 -->
                     <div class="group-item">
                         <a class="group-item-icon" href="mailto:1006877324@qq.com" target="_blank" rel="noopener nofollow">
@@ -354,11 +374,11 @@
                         </a>
                         <div class="group-info-group">
                             <div class="group-info">
-                                <a class="title" href="mailto:990320751@qq.com" target="_blank" rel="noopener nofollow">邮箱</a>
-                                <a class="discription" href="mailto:990320751@qq.com" target="_blank" rel="noopener nofollow">邮箱：1006877324@qq.com</a>
+                                <a class="title" href="mailto:1006877324@qq.com" target="_blank" rel="noopener nofollow">邮箱</a>
+                                <a class="discription" href="mailto:1006877324@qq.com" target="_blank" rel="noopener nofollow">邮箱：1006877324@qq.com</a>
                             </div>
                             <div class="group-info-button">
-                                <a class="linkbutton" href="mailto:990320751@qq.com" target="_blank" rel="noopener nofollow">发信</a>
+                                <a class="linkbutton" href="mailto:1006877324@qq.com" target="_blank" rel="noopener nofollow">发送</a>
                             </div>
                         </div>
                     </div>
@@ -403,6 +423,8 @@
                 </div>
             </div>
 
+
+            <!-- --- -->
             <div class="footer">
                 <div class="footer-content need-padding">
                     <span class="info">Copyright © 2023 Xiao'Mu </span>
