--- a/index.html
+++ b/index.html
@@ -329,18 +329,18 @@
 
                     <!-- 微信 -->
                     <div class="group-item">
-                        <a class="group-item-icon" href="img/wechat.png" target="_blank" rel="noopener nofollow">
+                        <a class="group-item-icon" href="https://wechat.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
                             <svg class="icons group-item-icon-img">
             <use xlink:href="#icon-weixin1"></use>
           </svg>
                         </a>
                         <div class="group-info-group">
                             <div class="group-info">
-                                <a class="title" href="img/wechat.png" target="_blank" rel="noopener nofollow">微信</a>
-                                <a class="discription" href="img/wechat.png" target="_blank" rel="noopener nofollow">微信号：sweetday0102</a>
+                                <a class="title" href="https://wechat.lixiaomu.fun/" target="_blank" rel="noopener nofollow">微信</a>
+                                <a class="discription" href="https://wechat.lixiaomu.fun/" target="_blank" rel="noopener nofollow">微信号：sweetday0102</a>
                             </div>
                             <div class="group-info-button">
-                                <a class="linkbutton" href="img/wechat.png" target="_blank" rel="noopener nofollow">添加</a>
+                                <a class="linkbutton" href="https://wechat.lixiaomu.fun/" target="_blank" rel="noopener nofollow">添加</a>
                             </div>
                         </div>
                     </div>
