--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <a href="javascript:heoWeb.scrollTo('服务');" class="nav-item">服务</a>
                 <a href="javascript:heoWeb.scrollTo('相册');" class="nav-item">相册</a>
                 <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
-                <a href="javascript:heoWeb.scrollTo('技能');" class="nav-item">技能</a>
+                <a href="javascript:heoWeb.scrollTo('足迹');" class="nav-item">足迹</a>
                 <a href="javascript:heoWeb.scrollTo('社交');" class="nav-item">社交</a>
+                <a href="javascript:heoWeb.scrollTo('技能');" class="nav-item">技能</a>
                 <a class="nav-menu" id="nav-menu"><span class="iconfont icon-caidan"></span></a>
             </div>
         </div>
@@ -45,11 +46,12 @@
         <a href="javascript:heoWeb.scrollTo('服务');" class="nav-item">服务</a>
         <a href="javascript:heoWeb.scrollTo('相册');" class="nav-item">相册</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
-        <a href="javascript:heoWeb.scrollTo('技能');" class="nav-item">技能</a>
+        <a href="javascript:heoWeb.scrollTo('足迹');" class="nav-item">足迹</a>
         <a href="javascript:heoWeb.scrollTo('社交');" class="nav-item">社交</a>
+        <a href="javascript:heoWeb.scrollTo('技能');" class="nav-item">技能</a>
     </div>
     <div class="nav-banner">
-        <a class="nav-banner-text" href="https://memos-on-replit.lixiaomuicon.repl.co/explore" target="_blank"> 要开心哦 </a>
+        <a class="nav-banner-text" href="/" target="_blank"> 要开心哦 </a>
     </div>
 
     <!-- <a id="go-top" href="javascript:scrollToTopWithAnimation()">
@@ -84,8 +86,8 @@
                 <span class="description">基于 Butterfly 主题进行了大量的魔改与美化。</span>
             </div>
             <div class="link-group">
-                <a class="primary-button" href="https://blog.lixiaomu.fun/">访问项目一</a>
-                <a class="primary-button" href="https://weblog.lixiaomu.fun/">访问项目二</a>
+                <a class="primary-button" target="_blank" href="https://blog.lixiaomu.fun/">访问项目一</a>
+                <a class="primary-button" target="_blank" href="https://weblog.lixiaomu.fun/">访问项目二</a>
             </div>
         </div>
         <div class="banner-pic">
@@ -156,7 +158,7 @@
                         <span class="description">发现生活的美好并将它记录下来</span>
                     </div>
                     <div class="link-group">
-                        <a class="primary-button" href="https://plog.lixiaomu.fun">查看更多</a>
+                        <a class="primary-button" target="_blank" href="https://plog.lixiaomu.fun">查看更多</a>
                     </div>
                 </div>
                 <div class="banner-pic photos">
@@ -173,7 +175,9 @@
                     </div>
                 </div>
             </div>
+            <!--相册end -->
 
+            <!--项目 -->
             <div class="product-group need-padding" id="项目">
                 <h2 class="group-title">小项目</h2>
                 <span class="group-description">随便写的一些小项目</span>
@@ -263,44 +267,27 @@
                         </div>
                     </div>
 
-                    <!-- 足迹 -->
-                    <div class="group-item">
-                        <a class="group-item-icon" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
-                            <img class="group-item-icon-img" src="img/zuji.png" alt="product-icon" title="product-icon">
-                        </a>
-                        <div class="group-info-group">
-                            <div class="group-info">
-                                <a class="title" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">足迹
-                                            </a>
-                                <a class="discription" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">记录曾去过的地方
-                                </a>
-                            </div>
-                            <div class="group-info-button">
-                                <a class="linkbutton" href="https://zuji.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
+            <!--项目end -->
 
-
-            <!-- 技能 -->
-            <div class="product-banner" id="技能" style="background-image: linear-gradient(180deg, #274DFF 0%, #6CA4FF 100%);">
+            <!-- 足迹 -->
+            <div class="product-banner" id="足迹" style="background-image: linear-gradient(180deg, #fdf8ff 0%, #433d4d 100%);">
                 <div class="banner-info need-padding">
-                    <span class="title">技能</span>
+                    <span class="title">相册</span>
                     <div class="banner-discription-group">
-                        <span class="description">奇思妙想的<span class="inline-word">实现</span></span>
-                        <span class="description">离不开<span class="inline-word">技术</span></span>
+                        <span class="description">发现生活的美好并将它记录下来</span>
                     </div>
                     <div class="link-group">
-                        <a class="primary-button" href="https://blog.lixiaomu.fun/about/">查看更多</a>
+                        <a class="primary-button" target="_blank" href="https://zuji.lixiaomu.fun">查看更多</a>
                     </div>
                 </div>
                 <div class="banner-pic">
-                    <img class="banner-pic-img" src="img/banner-skill.webp" alt="banner image">
+                    <img class="banner-pic-img" src="img/zuji.png" alt="banner image">
                 </div>
             </div>
-
+            <!--足迹end -->
 
             <!--社交 -->
             <div class="product-group need-padding contact" id="社交">
@@ -422,9 +409,29 @@
 
                 </div>
             </div>
+            <!-- 社交end -->
+
+            <!-- 技能 -->
+            <div class="product-banner" id="技能" style="background-image: linear-gradient(180deg, #274DFF 0%, #6CA4FF 100%);">
+                <div class="banner-info need-padding">
+                    <span class="title">技能</span>
+                    <div class="banner-discription-group">
+                        <span class="description">奇思妙想的<span class="inline-word">实现</span></span>
+                        <span class="description">离不开<span class="inline-word">技术</span></span>
+                    </div>
+                    <div class="link-group">
+                        <a class="primary-button" target="_blank" href="https://blog.lixiaomu.fun/about/">查看更多</a>
+                    </div>
+                </div>
+                <div class="banner-pic">
+                    <img class="banner-pic-img" src="img/banner-skill.webp" alt="banner image">
+                </div>
+            </div>
+
+            <!-- 技能end -->
 
 
-            <!-- --- -->
+            <!-- footer -->
             <div class="footer">
                 <div class="footer-content need-padding">
                     <span class="info">Copyright © 2023 Xiao'Mu </span>
