--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
             <!-- 足迹 -->
             <div class="product-banner" id="足迹" style="background-image: linear-gradient(180deg, #fdf8ff 0%, #433d4d 100%);">
                 <div class="banner-info need-padding">
-                    <span class="title">相册</span>
+                    <span class="title">足迹地图</span>
                     <div class="banner-discription-group">
-                        <span class="description">发现生活的美好并将它记录下来</span>
+                        <span class="description">记录曾去过的地方和想去的地方</span>
                     </div>
                     <div class="link-group">
                         <a class="primary-button" target="_blank" href="https://zuji.lixiaomu.fun">查看更多</a>
