--- a/index.html
+++ b/index.html
@@ -183,6 +183,23 @@
                 <span class="group-description">随便写的一些小项目</span>
                 <div class="group-items">
 
+                    <!-- 人生清单 -->
+                    <div class="group-item">
+                        <a class="group-item-icon" href="https://list.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
+                            <img class="group-item-icon-img" src="https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/blog/202307030832056.gif" alt="product-icon" title="product-icon">
+                        </a>
+                        <div class="group-info-group">
+                            <div class="group-info">
+                                <a class="title" href="https://list.lixiaomu.fun/" target="_blank" rel="noopener nofollow">Life list 
+                        </a>
+                                <a class="discription" href="https://list.lixiaomu.fun/" target="_blank" rel="noopener nofollow">人生清单</a>
+                            </div>
+                            <div class="group-info-button">
+                                <a class="linkbutton" href="https://list.lixiaomu.fun/" target="_blank" rel="noopener nofollow">前往</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- wenan -->
                     <div class="group-item">
                         <a class="group-item-icon" href="https://wenan.lixiaomu.fun/" target="_blank" rel="noopener nofollow">
